--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ITdotcom</title>
+  <title>LakuDotKom</title>
 
   <!--Google web fonts-->
   <link
@@ -56,10 +56,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Beranda</a>
+            <a class="nav-link" href="index.html">Beranda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kategori</a>
+            <a class="nav-link" href="kategori.html">Kategori</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Tentang</a>
@@ -71,8 +71,8 @@
             <a href="#" class="nav-link"><img src="img/cart.png" alt=""></a>
           </li>
         </ul>
-        <a href="#" class="btn btn-sign up">Sign Up</a>
-        <a href="#" class="btn btn-sign in">Sign In</a>
+        <a href="login.html" class="btn btn-sign up">Sign Up</a>
+        <a href="login.html" class="btn btn-sign in">Sign In</a>
       </div>
     </div>
   </nav>
