menambahkan beberapa file dan mengubah isi file

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <a href="#" class="nav-link"><img src="img/cart.png" alt=""></a>
           </li>
         </ul>
-        <a href="login.html" class="btn btn-sign up">Sign Up</a>
-        <a href="login.html" class="btn btn-sign in">Sign In</a>
+        <a href="#" class="btn btn-sign up">Sign Up</a>
+        <a href="#" class="btn btn-sign in">Sign In</a>
       </div>
     </div>
   </nav>
@@ -275,7 +275,7 @@
                 <img src="img/product/1.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title"><small>Blouse</small></a>
+                    <a class="text-title">Cardy</a>
                     <span class="text-category">Babytery</span>
                   </div>
                   <div class="label-bg"></div>
@@ -288,7 +288,7 @@
                 <img src="img/product/2.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Visual Infography</a>
+                    <a class="text-title">Blouse</a>
                     <span class="text-category">Crape</span>
                   </div>
                   <div class="label-bg"></div>
@@ -301,7 +301,7 @@
                 <img src="img/product/3.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Sonor's Design</a>
+                    <a class="text-title">Blouse</a>
                     <span class="text-category">Crape</span>
                   </div>
                   <div class="label-bg"></div>
@@ -314,8 +314,8 @@
                 <img src="img/product/4.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Typography Company</a>
-                    <span class="text-category">Business card</span>
+                    <a class="text-title">Kemeja</a>
+                    <span class="text-category">Katun</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -327,8 +327,8 @@
                 <img src="img/product/45.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Weatherette</a>
-                    <span class="text-category">APP</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -340,8 +340,8 @@
                 <img src="img/product/48.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">BMF</a>
-                    <span class="text-category">Business card</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -353,8 +353,8 @@
                 <img src="img/product/41.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Techlion</a>
-                    <span class="text-category">Business card</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -366,8 +366,8 @@
                 <img src="img/product/49.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">KittyPic</a>
-                    <span class="text-category">Logo</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -405,8 +405,8 @@
                 <img src="img/product/31.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Mobi Sock</a>
-                    <span class="text-category">Logo</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -418,8 +418,8 @@
                 <img src="img/product/34.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Village Community Church</a>
-                    <span class="text-category">Logo</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -431,8 +431,8 @@
                 <img src="img/product/36.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Domino's Pizza</a>
-                    <span class="text-category">Icon</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
@@ -457,8 +457,8 @@
                 <img src="img/product/35.jpg" alt="" />
                 <div class="label">
                   <div class="label-text">
-                    <a class="text-title">Instagram</a>
-                    <span class="text-category">Icon</span>
+                    <a class="text-title">Kacamata</a>
+                    <span class="text-category">Kacamata</span>
                   </div>
                   <div class="label-bg"></div>
                 </div>
