memodifikasi beberapa file

--- a/index.html
+++ b/index.html
@@ -578,9 +578,7 @@
   <script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
   <script src="js/imagesloaded.pkgd.min.js"></script>
 
-  <script src="js/skillset.js"></script>
-
-  <script src="js/owl.carousel.js"></script>
+  <script src="js/jquery.sticky.js"></script>
 
 
   <script src="js/scrollupto.js"></script>
